# woti

./: Cargo.toml  LICENSE  Makefile  README.md
.githooks/: post-commit
.github/workflows/: release.yml
openspec/changes/archive/2026-03-18-add-copy-shortcut/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-add-date-to-timeline-day/: design.md  (+2 more)
openspec/specs/accelerated-nav/: spec.md
openspec/specs/ci-release/: spec.md
openspec/specs/city-alias-region-fallback/: spec.md
openspec/specs/cldr-hour-cycle/: spec.md
openspec/specs/cli-datetime-override/: spec.md
openspec/specs/copy-selection/: spec.md
openspec/specs/day-label-selection-extension/: spec.md
openspec/specs/dst-aware-timeline/: spec.md
openspec/specs/dynamic-tz-abbrev-year/: spec.md
openspec/specs/expanded-city-aliases/: spec.md
openspec/specs/half-hour-timeline-indicator/: spec.md
openspec/specs/hour-offset-indicator/: spec.md
openspec/specs/multi-column-day-label/: spec.md
openspec/specs/print-command/: spec.md
openspec/specs/refactor-tui-modules/: spec.md
openspec/specs/robust-timezone-detection/: spec.md
openspec/specs/scroll-aware-info-column/: spec.md
openspec/specs/shell-installer/: spec.md
openspec/specs/sub-hour-nav-interval/: spec.md
openspec/specs/working-hours-shading/: spec.md
openspec/specs/xdg-config-path/: spec.md
scripts/: install.sh  release.sh  setup-hooks.sh
src/: cli.rs  config.rs  main.rs  timezone.rs  tui.rs  tz_data.rs
src/tui/: app.rs  copy.rs  event.rs  mod.rs  nav_interval.rs  render.rs  theme.rs  time_format.rs
(+103 files in other folders)
