[package]
name = "woti"
version = "0.5.0"
edition = "2024"
description = "World time in your terminal — see current times across time zones at a glance"

[dependencies]
arboard = "3"
chrono = "0.4"
chrono-tz = { version = "0.10", features = ["case-insensitive"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
